--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Inosoft's Home</title>
   </head>
   <body>
-    <div class="container container-md">
+    <div class="container container-md my-5">
       <h2>Inosoft Bootcamp</h2>
       <h6>Bootcamp Introduction</h6>
       <hr class="hr" style="height: 2rem" />
@@ -88,45 +88,88 @@
       <div class="thick-hr"></div>
       <div class="my-4">
         <h3>Contact Us</h3>
-        <form>
-          <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label"
-              >Email address</label
-            >
-            <input
-              type="email"
-              class="form-control"
-              id="exampleInputEmail1"
-              aria-describedby="emailHelp"
-            />
-            <div id="emailHelp" class="form-text">
-              We'll never share your email with anyone else.
+        <form class="row">
+            <div class="col-md-6 mb-3">
+              <label for="exampleInputEmail1" class="form-label">Name</label>
+              <input
+                type="email"
+                class="form-control"
+                id="exampleInputEmail1"
+                placeholder="Enter Name"
+                aria-describedby="emailHelp"
+              />
+            </div>
+            <div class="col-md-6 mb-3">
+              <label for="exampleInputEmail1" class="form-label"
+                >Email address</label
+              >
+              <input
+                type="email"
+                class="form-control"
+                id="exampleInputEmail1"
+                placeholder="Enter Email"
+                aria-describedby="emailHelp"
+              />
+            </div>
+
+            <div class="col-md-6 mb-3">
+              <label for="exampleInputEmail1" class="form-label"
+                >Phone</label
+              >
+              <input
+                type="email"
+                class="form-control"
+                id="exampleInputEmail1"
+                placeholder="Enter Phone"
+                aria-describedby="emailHelp"
+              />
+            </div>
+
+            <div class="col-md-3 radio-gender mb-3 order-md-5 order-sm-4">
+              <p>Gender</p>
+              <label class="radio-inline">
+                <input
+                  type="radio"
+                  name="optradio"
+                  id="gender-radio"
+                  checked
+                />Male
+              </label>
+              <label class="radio-inline">
+                <input type="radio" name="optradio" id="gender-radio" />Female
+              </label>
+            </div>
+            <div class="col-md-3 mb-3 order-md-6 order-sm-5">
+              <label for="validationCustom04" class="form-label"></label>
+              <select class="form-select">
+                <option selected disabled value="">
+                  What's your favorite cat
+                </option>
+                <option>...</option>
+              </select>
+            </div>
+            <div class="col-md-6 mb-3 order-md-4 order-sm-6">
+              <label for="exampleFormControlTextarea1" class="form-label"
+                >Comments</label
+              >
+              <textarea
+                class="form-control"
+                id="exampleFormControlTextarea1"
+                rows="3"
+              >
+Enter comments</textarea
+              >
             </div>
           </div>
-          <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label"
-              >Password</label
-            >
-            <input
-              type="password"
-              class="form-control"
-              id="exampleInputPassword1"
-            />
+          <div class="col-md-12 ">
+            <button type="submit" class="btn btn-primary btn-style">
+              Submit
+            </button>
           </div>
-          <div class="mb-3 form-check">
-            <input
-              type="checkbox"
-              class="form-check-input"
-              id="exampleCheck1"
-            />
-            <label class="form-check-label" for="exampleCheck1"
-              >Check me out</label
-            >
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
         </form>
       </div>
     </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
